# PM-Agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PM-Agent-MVP-PRD.md  PM-Agent-开发计划.md  PM-Agent-技术方案.md  README.md  pyproject.toml
.cursor/plans/: @_路径补全_0840a9cf.plan.md  @补全计划_592a6380.plan.md  场景分类双轴改造_8b291491.plan.md  对话上下文前三层_20b76e93.plan.md  工具域分包重组_5d517dab.plan.md  推荐匹配规则改造_ea257b6c.plan.md  (+1 more)
TDD/: PM-Agent-技术选型调研-2026-07-14.md
data/: recommendation_boosts.json  recommendation_synonyms.json  tool_candidates.json  tools.archive.json  tools.json
doc/: PM-Agent-MVP-PRD.md  PM-Agent-开发计划.md  PM-Agent-技术方案.md  PM-Agent-技术选型调研-2026-07-14.md  PM-Agent-陪跑咨询-实现方案-2026-07-17.md  PM-Agent-陪跑咨询-需求文档-2026-07-17.md  PM-工具库运营手册.md  agent_learn.md  决策记录-需求文档.md  后续迭代注意点.md
docs/: PM-Agent-MVP-PRD.md  PM-工具库运营手册.md  agent_learn.md  writing-background-从零造Agent-系列开篇.md  与书籍对应点.md  决策记录-需求文档.md  后续迭代注意点.md  我的笔记.md  需求孵化.md
scripts/: manage_tool_catalog.py  migrate_tools_use_cases.py
tests/: conftest.py  test_acceptance.py  test_catalog_evaluation_cli.py  test_catalog_ops.py  test_categories.py  test_cli_attach.py  test_cli_input.py  test_cli_material.py  test_cli_paste.py  test_cli_render.py  test_cli_terminal.py  test_cli_tools.py  test_consulting.py  test_context.py  test_debug_log.py  test_draft_merge.py  test_evaluation.py  test_evaluation_views.py  test_llm_real.py  test_loop_limits.py  test_matching.py  test_matrix_render.py  test_path_guard.py  test_repo.py  test_session_clear.py  test_smoke.py  test_spinner.py  test_tool_parallel.py  test_trace.py
(+77 files in other folders)
